fix: replace the sliced connector background svg and align images

--- a/src/components/Integration/styles.module.less
+++ b/src/components/Integration/styles.module.less
@@ -33,15 +33,21 @@
   align-items: center;
   justify-content: space-around;
 
+  svg {
+    height: 20%;
+  }
+
   @media (min-width: 426px) {
     gap: 24px;
   }
 
   .flowImage {
-    max-width: 230px;
+    max-width: 233px;
     width: 100%;
     position: relative;
     z-index: 1;
+    display: flex;
+    align-items: center;
 
     .connectorBackground {
       width: 100%;
